deploy/resources/dns/kr-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kr-app
  namespace: krns
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kr-ip
    networking.gke.io/managed-certificates: kr-certificate,kr-www-certificate
    # TODO: need to investigate further on using HTTP vs HTTPs
    # it appears that specifying both force-ssl-redirect and allow-http doesn't work
    # kubernetes.io/ingress.allow-http: "false"
    # ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: wordpress
spec:
  backend:
    serviceName: kr-app-backend
    servicePort: 80
